--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@ permalink: /
 header:
   overlay_color: "#5e616c"
   overlay_image: /assets/images/gtm_company_view_wide.jpg
-  actions:
-    - label: "<i class='fas fa-download'></i> Install now"
-      url: "/docs/quick-start-guide/"
 excerpt:
-  <b>하남중공업</b> - A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.<br />
-  <small><a herf="/contact/">찾아오시는 길</a></small><br />
-  <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.16.3">Latest release v4.16.3</a></small>
+  <b>하남중공업</b> <br />   - 더 넓은 세상을 꿈꾸다. <br />
+  <small><a href="/contact/">Latest release v4.16.3</a></small><br />
+  <small><a href="/contact/">찾아오시는 길</a></small>
 feature_row:
-  - image_path: /assets/images/raw_materials_plates.jpg
-    alt: "customizable"
-    title: "원자재 관련 사업"
-    excerpt: "각종 산업의 밑바탕이 되는 철강 원자재 기초 가공 및 공급."
-    url: "/business/materials/"
+  - image_path: /assets/images/mm-responsive-feature.png
+    alt: "About 하남중공업"
+    title: "About 하남중공업"
+    excerpt:
+      <b>20년</b> 이상의 기술 노하우-<br />
+      하남중공업 소개
+    url: "/about/CEO_greeting/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /assets/images/mm-responsive-feature.png
-    alt: "fully responsive"
-    title: "금형 가공 사업"
-    excerpt: "20년 이상 풍부한 경험을 바탕으로 한 모든 종류의 금형 가공"
+    alt: "초대형 NC/CNC 가공"
+    title: "초대형 NC/CNC 가공"
+    excerpt: "기초 **원자재 가공**부터 각종 금형 자재 가공, LCD챔버, 선박 ENGINE BLOCK등 다방면에 걸친 가공 명가."
     url: "/business/mold/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /assets/images/mm-free-feature.png
-    alt: "초대형 MC/CNC 가공"
-    title: "초대형 MC/CNC 가공"
-    excerpt: "LCD챔버, 선박 ENGINE BLOCK등 초대형 가공 사업"
+    alt: "연락하시는 길"
+    title: "연락하시는 길"
+    excerpt:
+      "**광주본사(TEL) : 062-952-2244**<br/>
+      **울산지사(TEL) : 052-292-6066**<br/>
+      그 외 찾아오시는 길은 아래를 클릭하세요."
     url: "/contact/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
