--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ excerpt:
   <br /><br /><b>하남중공업</b> <br />   - 더 넓은 세상을 꿈꾸다. <br /><br />
   <small><a href="/contact/">찾아오시는 길</a></small>
 feature_row:
-  - image_path: /assets/images/mm-responsive-feature.png
+  - image_path: /assets/images/feature_1.jpg
     alt: "About 하남중공업"
     title: "About 하남중공업"
     excerpt:
@@ -17,14 +17,14 @@ feature_row:
     url: "/about/CEO_greeting/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path: /assets/images/mm-responsive-feature.png
+  - image_path: /assets/images/feature_2.jpg
     alt: "초대형 NC/CNC 가공"
     title: "초대형 NC/CNC 가공"
     excerpt: "기초 **원자재 가공**부터 각종 **금형 자재 가공, LCD챔버, 선박 ENGINE BLOCK**등 다방면에 걸친 가공 명가."
     url: "/business/mold/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path: /assets/images/mm-free-feature.png
+  - image_path: /assets/images/feature_3.jpg
     alt: "연락하시는 길"
     title: "연락하시는 길"
     excerpt:
